@@ -1,3 +1,6 @@
+2025-01-07  Franz Holzinger  <franz@ttproducts.de>
+    * Deprecation no. 97126: TCEforms removed in FlexForm
+
 2024-12-05 Franz Holzinger  <franz@ttproducts.de>
     compatibility 13: Use JambageCom\Div2007\Compatibility\AbstractPlugin
         instead of TYPO3\CMS\Frontend\Plugin\AbstractPlugin
